# nfl-rss-nlp

./: .gitignore  Cargo.toml  LICENSE  README.MD  env.fish  env.sh  man-page.mom  nfl-rss-nlp.1  requirements-macos.fish  requirements-macos.sh
src/: context.rs  main.rs  predict.rs  rss_read.rs
