[package]
name = "nfl-rss-nlp"
version = "0.1.0"
authors = ["Vai Srivastava <vai.sriv@icloud.com>"]
edition = "2021"

[dependencies]
polars = { version = "0.43.1", features = ["json", "lazy"] }
polars-io = "0.43.1"
reqwest = { version = "0.12.8", features = ["json"] }
rss = { version = "2.0.9", features = ["with-serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
