[package]
name = "nfl-rss-nlp"
version = "1.0.0"
authors = ["Vai Srivastava <vai.sriv@icloud.com>"]
edition = "2021"
description = "NFL Super Bowl prediction tool using NLP from RSS feeds"
repository = "https://github.com/vaisriv/nfl-rss-nlp"
keywords = ["cli", "rss", "nlp"]
categories = ["command-line-utilities"]

[dependencies]
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.23", features = ["derive"] }
polars = { version = "0.43.1", features = ["json", "lazy"] }
reqwest = { version = "0.12.8", features = ["json"] }
rss = { version = "2.0.9", features = ["with-serde"] }
rust-bert = "0.23.0"
tokio = { version = "1.40.0", features = ["full"] }
